// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot tests works on lowercase input 1`] = `
Object {
  "callsign": "ABC123",
  "category": "SSB",
  "claimedScore": 652,
  "club": undefined,
  "contestId": "123",
  "contestLocation": undefined,
  "email": "abc123@gmail.com",
  "logAssisted": false,
  "logBand": "ALL",
  "logEmail": undefined,
  "logFile": null,
  "logLocation": undefined,
  "logMode": "SSB",
  "logOperator": "SINGLE",
  "logPower": "QRP",
  "logScore": NaN,
  "logStation": "PORTABLE",
  "logTransmitter": "ONE",
  "multipleOperators": false,
  "name": undefined,
}
`;

exports[`snapshot tests works on normal input 1`] = `
Object {
  "callsign": "ABC123",
  "category": "SSB",
  "claimedScore": 652,
  "club": undefined,
  "contestId": "123",
  "contestLocation": undefined,
  "email": "abc123@gmail.com",
  "logAssisted": false,
  "logBand": "ALL",
  "logEmail": "ABC123@arrl.net",
  "logFile": null,
  "logLocation": "AR",
  "logMode": "SSB",
  "logOperator": "SINGLE",
  "logPower": "QRP",
  "logScore": 652,
  "logStation": "PORTABLE",
  "logTransmitter": "ONE",
  "multipleOperators": false,
  "name": "Henry Darnell",
}
`;

exports[`snapshot tests works on padded input 1`] = `
Object {
  "callsign": "ABC123",
  "category": "SSB",
  "claimedScore": 652,
  "club": "Hudson",
  "contestId": "123",
  "contestLocation": undefined,
  "email": "abc123@gmail.com",
  "logAssisted": true,
  "logBand": undefined,
  "logEmail": "REDACT.qrp@gmail.com",
  "logFile": null,
  "logLocation": "NY",
  "logMode": "MIXED",
  "logOperator": "SINGLE",
  "logPower": "QRP",
  "logScore": 1200,
  "logStation": "FIXED",
  "logTransmitter": undefined,
  "multipleOperators": false,
  "name": "REDACT",
}
`;
